PDI_131: Add user sync
